non-docker cold start benchmark